# omnibot

./: .gitignore  README.md  demo.py  gradio_demo.py  pyproject.toml
client/: Dockerfile  compose.yml
client/scripts/: doctor.sh  manage_vm.sh
omniparser/: omni_parser.py
omniparser/adapter/object_detection/: base.py  yolo_adapter.py
omniparser/adapter/ocr/: base.py  easy_ocr_adapter.py
omniparser/adapter/vision_language/: base.py  florence_adapter.py
omniparser/data/: som.py
omniparser/util/: box_annotator.py  box_utils.py  image_utils.py
scripts/: setup.sh
server/: app.py
util/: spatial_hash.py  utils.py
